...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pixels"
    tools:context=".activity.UserStatisticsActivity">

    <TextView
        android:id="@+id/match_history_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_history_label"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
